# incubator

./: AGENTS.md  README.md
.claude/: skills
outliner/: .gitignore  CHANGELOG.md  DEVELOPMENT.md  Makefile  README.md  pyproject.toml
outliner/src/outliner/: autodetect.py  cli.py  types.py
outliner/src/outliner/parsers/: __init__.py  asciidoc.py  c.py  clojure.py  csharp.py  go.py  html.py  java.py  javascript.py  json.py  markdown.py  orgmode.py  perl.py  php.py  python.py  rst.py  ruby.py  rust.py  scala.py  shell.py  swift.py  util.py  xml.py  zig.py
outliner/tests/: test_asciidoc.py  test_c.py  test_cli.py  test_clojure.py  test_csharp.py  test_go.py  test_html.py  test_java.py  test_javascript.py  test_json.py  test_markdown.py  test_orgmode.py  test_parsers.py  test_perl.py  test_php.py  test_python.py  test_rst.py  test_ruby.py  test_rust.py  test_scala.py  test_shell.py  test_swift.py  test_util.py  test_xml.py  test_zig.py
outliner/tests/fixtures/: rfc_sample.txt  setext.md
outliner/tests/fixtures/adoc/: minimal.adoc  sample.adoc
outliner/tests/fixtures/c/: sample.c  sample.cpp
outliner/tests/fixtures/clj/: sample.clj
outliner/tests/fixtures/cs/: sample.cs
outliner/tests/fixtures/go/: sample.go
outliner/tests/fixtures/html/: basic.html
outliner/tests/fixtures/java/: sample.java
outliner/tests/fixtures/js/: component.jsx  sample.js  sample.ts
outliner/tests/fixtures/json/: array.json  ndjson.json  nested.json  object.json
outliner/tests/fixtures/md/: atx.md  mixed.md
outliner/tests/fixtures/org/: minimal.org  sample.org
(+116 files in other folders)
