[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "outliner"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
outline = "outliner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
