[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "outliner-cli"
version = "0.3.0"
description = "Print the structural outline of source files for LLM navigation"
authors = [{name = "Per Cederberg"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.urls]
Homepage = "https://github.com/cederberg/incubator/tree/main/outliner"
Repository = "https://github.com/cederberg/incubator"

[project.scripts]
outliner-cli = "outliner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
